Fix wrong meta tag name for urlToResource

--- a/resources/overrides/signposting.html
+++ b/resources/overrides/signposting.html
@@ -15,7 +15,7 @@
     <meta name="versionDate" content="{{ page.meta.versionDate }}"/>
   {% endif %}
   {% if page.meta and page.meta.urlToResource %}
-    <meta name="abstract" content="{{ page.meta.urlToResource }}"/>
+    <meta name="urlToResource" content="{{ page.meta.urlToResource }}"/>
   {% endif %}
   {% if page.meta and page.meta.resourceURLType %}
     <meta name="resourceURLType" content="{{ page.meta.resourceURLType }}"/>
